Fix image link in FHIR query visualization notebook

--- a/docs/documentation/fhirqueryman.ipynb
+++ b/docs/documentation/fhirqueryman.ipynb
@@ -341,7 +341,7 @@
     "## fq results visualize\n",
     "`fq results visualize`\n",
     "```Wrote: fhir-graph.html```\n",
-    "![image.png](../images/1KG-visualization.png)\n"
+    "![1KG visualization](images/1KG-visualization.png)\n"
    ]
   },
   {
