fix image links; add vocabulary doc

--- a/docs/documentation/fhirqueryman.ipynb
+++ b/docs/documentation/fhirqueryman.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -339,9 +339,14 @@
    "metadata": {},
    "source": [
     "## fq results visualize\n",
-    "`fq results visualize`\n",
-    "```Wrote: fhir-graph.html```\n",
-    "![image.png](../images/1KG-visualization.png)\n"
+    "\n",
+    "```fq results visualize\n",
+    "\n",
+    "Wrote: fhir-graph.html\n",
+    "```\n",
+    "\n",
+    "![1KG visualization](/images/1KG-visualization.png)\n",
+    "\n"
    ]
   },
   {
@@ -357,7 +362,8 @@
     "```\n",
     "*  Or launch dtale for review\n",
     "```fq results dataframe --dtale```\n",
-    "![image.png](../images/1KG-dataframe.png)"
+    "\n",
+    "![1KG dataframe](/images/1KG-dataframe.png)"
    ]
   },
   {
@@ -387,15 +393,132 @@
     "```\n",
     "* This retrieves a histogram of all codeable concepts and extensions for all projects, rendered as a TSV.  Alternatively use the `--dtale` option to browse and filter results\n",
     "\n",
-    "![image.png](../images/1KG-population-vocabulary.png)"
+    "![1KG population vocabulary](/images/1KG-population-vocabulary.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here’s a **FHIR architect’s technical note** describing this Observation resource and its relationship to the `ResearchStudy`:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Technical Note: \"Vocabulary\" Observation Summary\n",
+    "\n",
+    "## Overview\n",
+    "\n",
+    "The Observation resource (`Observation/2034d746-6758-59aa-bd72-2ff659008ec8`) represents an **aggregated, study-level summary** of clinical and research data derived from multiple FHIR domains (Observation, Condition, Specimen, MedicationAdministration, Patient). Rather than describing a single patient instance, this Observation captures **population-level counts** of coded values that occurred within a referenced `ResearchStudy`.\n",
+    "\n",
+    "The Observation is marked with `status = final`, signaling that it is a stable, reportable aggregation.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Observation Contents\n",
+    "\n",
+    "### 1. **Observation.code**\n",
+    "\n",
+    "* The top-level `code` = `\"vocabulary\"` (`http://fhir-aggregator.org/fhir/CodeSystem/vocabulary`), indicating this Observation is reporting vocabulary usage frequencies within the study cohort.\n",
+    "\n",
+    "* To retrieve all vocabulary resources.\n",
+    "```\n",
+    "https://google-fhir.fhir-aggregator.org/Observation?code=vocabulary\n",
+    "```\n",
+    "\n",
+    "### 2. **Observation.component[]**\n",
+    "\n",
+    "Each component encodes:\n",
+    "\n",
+    "* A **path** (e.g., `Specimen.type`, `Observation.category`, `Condition.code`, `MedicationAdministration.medicationCodeableConcept`, `Patient.extension`).\n",
+    "* A **terminology code** from standard vocabularies (e.g., SNOMED CT, LOINC, NCIt, US Core Race/Ethnicity, HL7 clinical status).\n",
+    "* A **count** (`valueInteger`), representing how many study participants or records carried that specific coding.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "* **Specimen Types**: Tumor (22,722) vs Normal (12,433).\n",
+    "* **Observation Categories**: Laboratory (36,311), Survey (1,114).\n",
+    "* **Genomics**: LOINC 81247-9 (genetic variant reporting panel) observed 35,155 times.\n",
+    "* **Disease Progression**: NCIT “Days Between Birth and Diagnosis” (978), “Days Between Diagnosis and Death” (136).\n",
+    "* **Stage**: SNOMED AJCC pathological stages (e.g., Stage IIA = 351 cases, Stage IV = 22).\n",
+    "* **Conditions**: Cancer histologies (e.g., Lobular carcinoma, NOS = 219; Infiltrating ductular carcinoma = 828).\n",
+    "* **Medications**: Chemotherapeutics and hormonals (e.g., Cyclophosphamide = 453, Tamoxifen = 239).\n",
+    "* **Demographics**: Patient extensions (sex, race, ethnicity). Example: Female (982), Male (10), White (688), Black or African American (174), Hispanic/Latino (36).\n",
+    "\n",
+    "### 3. **Extensions**\n",
+    "\n",
+    "\n",
+    "# Aggregating Extensions in a Study-Level Observation\n",
+    "\n",
+    "In this Observation pattern, **FHIR extensions** such as *US Core Birth Sex, Race, and Ethnicity* are represented as aggregated counts. Each extension value is encoded as a separate `component`:\n",
+    "\n",
+    "* **Context coding**:\n",
+    "  A synthetic path indicator shows where the value was found, for example:\n",
+    "\n",
+    "  ```json\n",
+    "  {\n",
+    "    \"system\": \"http://fhir-aggregator.org/fhir/CodeSystem/vocabulary/path\",\n",
+    "    \"code\": \"Patient.extension\",\n",
+    "    \"display\": \"Patient.extension\"\n",
+    "  }\n",
+    "  ```\n",
+    "\n",
+    "* **Value coding**:\n",
+    "  The actual extension value is captured using the extension’s canonical system. Examples include:\n",
+    "\n",
+    "  ```json\n",
+    "  { \"system\": \"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex\",\n",
+    "    \"code\": \"F\", \"display\": \"F\" }\n",
+    "  ```\n",
+    "\n",
+    "  ```json\n",
+    "  { \"system\": \"http://hl7.org/fhir/us/core/StructureDefinition/us-core-race\",\n",
+    "    \"code\": \"White\", \"display\": \"White\" }\n",
+    "  ```\n",
+    "\n",
+    "  ```json\n",
+    "  { \"system\": \"http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity\",\n",
+    "    \"code\": \"hispanic or latino\", \"display\": \"hispanic or latino\" }\n",
+    "  ```\n",
+    "\n",
+    "* **Count**:\n",
+    "  The `valueInteger` holds the frequency observed in the study cohort.\n",
+    "\n",
+    "\n",
+    "This structure makes extension values **queryable and comparable** at the **ResearchStudy level** while preserving both the **context** (path in FHIR) and the **value semantics** (extension-defined code).\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 4. **Focus**\n",
+    "\n",
+    "* Direct reference to the same `ResearchStudy`.\n",
+    "\n",
+    "Together, the extension and focus explicitly bind this Observation to a specific ResearchStudy, framing it as **study-level aggregate data**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Relationship to ResearchStudy\n",
+    "\n",
+    "This Observation is **not a per-patient measurement** but a **study-wide analytic artifact**. The relationship can be summarized as:\n",
+    "\n",
+    "* **ResearchStudy** defines the study cohort, protocol, and design.\n",
+    "* **Observation** acts as an **analytic output of the study**, reporting distributions of values across participants.\n",
+    "* The `focus` element ensures the Observation is semantically tied to the ResearchStudy, while the `extension:part-of-study` makes the linkage explicit for query and aggregation pipelines.\n",
+    "* Effectively, this Observation provides **coded frequency distributions** that allow researchers to understand cohort characteristics, disease staging, treatments, and demographics without accessing raw patient-level data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Architectural Implications\n",
+    "\n",
+    "* This pattern supports **privacy-preserving research data sharing**, since counts are aggregated.\n",
+    "* It enables **cross-study comparisons**, as standardized terminologies (LOINC, SNOMED CT, NCIt, US Core) anchor the codes.\n",
+    "* It extends FHIR’s Observation to serve as a **vocabulary distribution index** within research cohorts, bridging patient-level data and study-level metadata.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "✅ **Summary:**\n",
+    "This Observation is a **study-level frequency table** of clinical, demographic, and treatment vocabularies, linked to a `ResearchStudy`. It operationalizes the connection between patient-level records and aggregated study metadata, supporting discovery, cohort characterization, and secondary research reuse.\n",
+    " "
+   ]
   }
  ],
  "metadata": {
